istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: allow-plaintext-eureka
  namespace: petclinic
spec:
  mtls:
    mode: DISABLE
