istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: petclinic-destinationrule
  namespace: petclinic
spec:
  host: "discovery-server.petclinic.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE  # Disables mutual TLS
